--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-suicide1.com is a web page for those devoted to the source of mindless confusion
+Welcome to bliss1.org
+
+
+Next show
+JUNE 22, 2023.
+
+send $10 to “VENMO” username: @life9
+
+for your discounted presale ticket.
+
+In description put “June 22”.
+
+I will deactivate the VENMO account when PRESALES are deemed sold out.
+
+Tickets at the door will be $20. 
+
+Oracle Tavern is located in Los Angeles, CA.
+
+<img src="/j22.png" alt="">
+
+
+see ya soon
