--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Welcome to bliss1.org
 
 Next show
 JUNE 22, 2023.
-
+<p>send $10 to “VENMO” username: @life9</p>
 send $10 to “VENMO” username: @life9
 
 for your discounted presale ticket.
