--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ I will deactivate the VENMO account when PRESALES are deemed sold out.
 Tickets at the door will be $20. 
 
 Oracle Tavern is located in Los Angeles, CA.
-
+<small>
 <img src="/j22.png" alt="">
-
+</small>
 
 see ya soon
