--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><b><span class="Apple-converted-space">                        </span>suicide1.com<span class="Apple-converted-space"> </span></b></span></p>
-<p class="p2"><span class="s1">404 page….. you are broken too, my man…</span></p>
+<p class="p1"><span class="s1"><a href="http://bliss1.org"><b>bliss1.org</b></a></span></p>
+<p class="p2"><span class="s1">404 page….. click the link above.</span></p>
 </body>
 </html>
