--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><b>bliss1.org<span class="Apple-converted-space"> </span></b></span></p>
-<p class="p2"><span class="s2"><a href="http://bliss1.org/"><i>bliss1.org</i></a></span><span class="s3"><i> . </i><a href="http://bliss1.org/events"><span class="s4"><i>events</i></span></a><i> . </i><a href="http://bliss1.org/audio"><span class="s4"><i>audio</i></span></a><i> . </i><a href="http://bliss1.org/photo"><span class="s4"><i>photo</i></span></a><i> . </i><a href="http://bliss1.org/text"><span class="s4"><i>text</i></span></a><i><span class="Apple-converted-space"> </span></i></span></p>
+<p class="p1"><span class="s1"><a href="http://bliss1.org"><b>bliss1.org</b></a><b><span class="Apple-converted-space"> </span></b></span></p>
+<p class="p2"><span class="s2"><a href="http://bliss1.org/events"><i>events</i></a></span><span class="s3"><i> . </i><a href="http://bliss1.org/audio"><span class="s4"><i>audio</i></span></a><i> . </i><a href="http://bliss1.org/photo"><span class="s4"><i>photo</i></span></a><i> . </i><a href="http://bliss1.org/text"><span class="s4"><i>text</i></span></a><i><span class="Apple-converted-space"> </span></i></span></p>
 <p class="p3"><span class="s1"><br>
 </span></p>
 <p class="p3"><span class="s1"><br>
