--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 83.0px; font: 72.0px Times; color: #000000; -webkit-text-stroke: #000000}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 83.0px; font: 72.0px Times; color: #0000ee; -webkit-text-stroke: #000000}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 83.0px; font: 72.0px Times; color: #000000; -webkit-text-stroke: #000000}
-    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
     span.s3 {font-kerning: none; color: #000000}
@@ -19,25 +17,6 @@
 </head>
 <body>
 <p class="p1"><span class="s1"><a href="http://bliss1.org"><b>bliss1.org</b></a><b><span class="Apple-converted-space"> </span></b></span></p>
-<p class="p2"><span class="s2"><a href="http://bliss1.org/events"><i>events</i></a></span><span class="s3"><i> . </i><a href="http://bliss1.org/audio"><span class="s4"><i>audio</i></span></a><i> . </i><a href="http://bliss1.org/photo"><span class="s4"><i>photo</i></span></a><i> . </i><a href="http://bliss1.org/text"><span class="s4"><i>text</i></span></a><i><span class="Apple-converted-space"> </span></i></span></p>
-<p class="p3"><span class="s1"><br>
-</span></p>
-<p class="p3"><span class="s1"><br>
-</span></p>
-<p class="p3"><span class="s1"><br>
-</span></p>
-<p class="p3"><span class="s1"><br>
-</span></p>
-<p class="p3"><span class="s1"><br>
-</span></p>
-<p class="p3"><span class="s1"><br>
-</span></p>
-<p class="p3"><span class="s1"><br>
-</span></p>
-<p class="p3"><span class="s1"><br>
-</span></p>
-<p class="p3"><span class="s1"><br>
-</span></p>
-<p class="p4"><span class="s1">&gt;&gt;&gt;&gt;&gt;&gt;&gt; Stashed changes<span class="Apple-converted-space"> </span></span></p>
+<p class="p2"><span class="s2"><a href="http://bliss1.org/events"><i>events</i></a></span><span class="s3"><i> . </i><a href="http://bliss1.org/audio"><span class="s4"><i>audio</i></span></a><i> . </i><a href="http://bliss1.org/photo"><span class="s4"><i>photo</i></span></a><i> . </i><a href="http://bliss1.org/text"><span class="s4"><i>text</i></span></a></span></p>
 </body>
 </html>
