--- a/events.html
+++ b/events.html
@@ -21,7 +21,7 @@
 <p class="p1"><span class="s1"><a href="http://bliss1.org/"><b>bliss1.org</b></a></span><span class="s2"><b><span class="Apple-converted-space"> </span></b></span></p>
 <p class="p2"><span class="s1"><a href="http://bliss1.org/events"><i>events</i></a></span><span class="s3"><i> . </i><a href="http://bliss1.org/audio"><span class="s4"><i>audio</i></span></a><i> . </i><a href="http://bliss1.org/photo"><span class="s4"><i>photo</i></span></a><i> . </i><a href="http://bliss1.org/text"><span class="s4"><i>text</i></span></a></span></p>
 <p class="p3"><span class="s5">future:</span></p>
-<p class="p3"><span class="s5"><a href="http://bliss1.org/events/2023/june30">june 30</a></span></p>
+<p class="p3"><span class="s5"><a href="/events/2023/june30">june 30</a></span></p>
 <p class="p3"><span class="s5">july 4<span class="Apple-converted-space"> </span></span></p>
 <p class="p3"><span class="s5">july 11</span></p>
 <p class="p3"><span class="s5">july 21</span></p>
