--- a/text.html
+++ b/text.html
@@ -11,8 +11,9 @@
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 92.0px; font: 80.0px Times; color: #0000ee; -webkit-text-stroke: #000000}
     p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #454545; min-height: 14.0px}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #454545}
-    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; font: 12.0px Times; color: #454545; min-height: 14.0px}
-    p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #e4af0a}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Helvetica Neue'; color: #454545; min-height: 14.0px}
+    p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; font: 12.0px Times; color: #454545; min-height: 14.0px}
+    p.p7 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #e4af0a}
     li.li4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #454545}
     span.s1 {text-decoration: underline ; font-kerning: none}
     span.s2 {font-kerning: none; color: #000000}
@@ -41,8 +42,10 @@
 <p class="p4">"Of course the people don't want war.<span class="Apple-converted-space"> </span></p>
 <p class="p4">But after all, it's the leaders of the country who determine the policy,<span class="Apple-converted-space"> </span></p>
 <p class="p4">and it's always a simple matter to drag the people along whether<span class="Apple-converted-space"> </span></p>
-<p class="p4">it's a democracy, a fascist dictatorship, or a parliament, or a communist dictatorship.<span class="Apple-converted-space"> </span></p>
-<p class="p4">Voice or no voice, the people can always be brought to the bidding of the leaders.<span class="Apple-converted-space"> </span></p>
+<p class="p4">it's a democracy, a fascist dictatorship,<span class="Apple-converted-space"> </span></p>
+<p class="p4">or a parliament, or a communist dictatorship.<span class="Apple-converted-space"> </span></p>
+<p class="p4">Voice or no voice, the people can<span class="Apple-converted-space"> </span></p>
+<p class="p4">always be brought to the bidding of the leaders.<span class="Apple-converted-space"> </span></p>
 <p class="p4">That is easy. All you have to do is tell them they are being attacked,<span class="Apple-converted-space"> </span></p>
 <p class="p4">and denounce the pacifists for lack of patriotism,<span class="Apple-converted-space"> </span></p>
 <p class="p4">and exposing the country to greater danger."</p>
@@ -54,7 +57,8 @@
 <p class="p3"><br></p>
 <p class="p4">June 7, 2023</p>
 <p class="p3"><br></p>
-<p class="p4">“Considering he was being carried by Himmler and Goring and still got beat means that he is for sure out of the top 100.<span class="Apple-converted-space"> </span></p>
+<p class="p4">“Considering he was being carried by Himmler and Goring<span class="Apple-converted-space"> </span></p>
+<p class="p4">and still got beat means that he is for sure out of the top 100.<span class="Apple-converted-space"> </span></p>
 <p class="p4">The fact that he blew this lead to a team constituting of the French (need I say more),<span class="Apple-converted-space"> </span></p>
 <p class="p4">the British (dependable long range and D player, but hardly an all-star),<span class="Apple-converted-space"> </span></p>
 <p class="p4">the USA (that came late and joined the game in the last quarter)<span class="Apple-converted-space"> </span></p>
@@ -62,8 +66,10 @@
 <p class="p4"><span class="Apple-converted-space"> </span>(understandable was exploring free agency until the end of the off-season) makes sure that Hitler<span class="Apple-converted-space"> </span></p>
 <p class="p4">won't be making an anniversary team even in 2098. And I hear you saying,</p>
 <p class="p4"><span class="Apple-converted-space"> </span>''But, he was being pulled back by the chokers from Italy''<span class="Apple-converted-space"> </span></p>
-<p class="p4">and while that being true, he also had one of the most driven high-motor teammates in the Kamikadze Japanese,<span class="Apple-converted-space"> </span></p>
-<p class="p4">which cements my opinion that Hitler was nothing more than a scrub and considering he has any legacy of note is laughable.<span class="Apple-converted-space"> </span></p>
+<p class="p4">and while that being true, he also had one of the<span class="Apple-converted-space"> </span></p>
+<p class="p4">most driven high-motor teammates in the Kamikadze Japanese,<span class="Apple-converted-space"> </span></p>
+<p class="p4">which cements my opinion that Hitler was nothing<span class="Apple-converted-space"> </span></p>
+<p class="p4">more than a scrub and considering he has any legacy of note is laughable.<span class="Apple-converted-space"> </span></p>
 <p class="p4">Perhaps if he didn't retire and continued playing,<span class="Apple-converted-space"> </span></p>
 <p class="p4">he could've gotten a ring as veteran minimum player vs LeMickey,<span class="Apple-converted-space"> </span></p>
 <p class="p4">but even that would not have cleared the blemish on his resume one bit. Carry on…”</p>
@@ -101,20 +107,7 @@
 <p class="p4">this message is from tech-bro eugenicists<span class="Apple-converted-space"> </span></p>
 <p class="p4">who want to sell useless software to<span class="Apple-converted-space"> </span></p>
 <p class="p4">artificially control how we percieve human productivity</p>
-<p class="p3"><br></p>
-<p class="p4">December 24, 2022</p>
-<p class="p3"><br></p>
-<p class="p4">People who were severely abused by family and then let them<span class="Apple-converted-space"> </span></p>
-<p class="p4">back into there life for any reason whatsoever are 100% part of the problem,<span class="Apple-converted-space"> </span></p>
-<p class="p4">no exceptions - because you are directly condoning<span class="Apple-converted-space"> </span></p>
-<p class="p4">severe abuse in society, even if you were the victim.<span class="Apple-converted-space"> </span></p>
-<p class="p3"><br></p>
-<p class="p4">The thought of it disgusts me and unsettles me deeply.<span class="Apple-converted-space"> </span></p>
-<p class="p3"><br></p>
-<p class="p4">Asking for a pity party while pulling that is 100% bullshit.</p>
-<p class="p3"><br></p>
-<p class="p4">And I don't think I'm victim blaming either,<span class="Apple-converted-space"> </span></p>
-<p class="p4">just get real with yourself and what you stand for.</p>
+<p class="p5"><br></p>
 <p class="p3"><br></p>
 <p class="p4">December 3, 2022</p>
 <p class="p3"><br></p>
@@ -168,10 +161,12 @@
 <p class="p4">As it is an empty canvas of intense</p>
 <p class="p4">Hydronephrotic concubines</p>
 <p class="p4">Similarly, I recon you may find it hard to bear</p>
-<p class="p4">The mindless confusion enhanced by simple mischaracterizations of life</p>
+<p class="p4">The mindless confusion enhanced<span class="Apple-converted-space"> </span></p>
+<p class="p4">by simple mischaracterizations of life</p>
 <p class="p4">For I am not a friend nor a seeker</p>
 <p class="p4">I am the sanctity excursion</p>
-<p class="p4">I am a rolling entourage of intense war that seeks to profit off your internal battles</p>
+<p class="p4">I am a rolling entourage of intense war<span class="Apple-converted-space"> </span></p>
+<p class="p4">that seeks to profit off your internal battles</p>
 <p class="p4">Find another day</p>
 <p class="p3"><br></p>
 <p class="p4">hook] hard to earn</p>
@@ -179,11 +174,11 @@
 <p class="p3"><br></p>
 <p class="p4">September 24, 2022</p>
 <p class="p4">Google maps music gps for music experience</p>
-<p class="p5"><br></p>
+<p class="p6"><br></p>
 <p class="p4">———</p>
 <p class="p3"><br></p>
-<p class="p6"><a href="http://Suicide1.com">Suicide1.com</a><span class="s4"><span class="Apple-converted-space"> </span></span></p>
-<p class="p6"><span class="Apple-converted-space">                        </span><span class="s4"><span class="Apple-converted-space">      </span>&lt;——&gt; <a href="http://Bliss1.org"><span class="s5">Bliss1.org</span></a></span></p>
+<p class="p7"><a href="http://Suicide1.com">Suicide1.com</a><span class="s4"><span class="Apple-converted-space"> </span></span></p>
+<p class="p7"><span class="Apple-converted-space">                        </span><span class="s4"><span class="Apple-converted-space">      </span>&lt;——&gt; <a href="http://Bliss1.org"><span class="s5">Bliss1.org</span></a></span></p>
 <p class="p3"><br></p>
 <p class="p4">Capitalism warzone <span class="Apple-converted-space">    </span>Marxist purity</p>
 <p class="p4"><span class="Apple-converted-space">                                     </span>Pdf of zines</p>
@@ -274,10 +269,6 @@
 <p class="p4">once we’ve accepted groupthink, it really doesn’t matter what the topic is about.<span class="Apple-converted-space"> </span></p>
 <p class="p4">It doesn’t matter who the enemy is that we’re all united in fighting against."</p>
 <p class="p3"><br></p>
-<p class="p4">Older women just want live-in twink sex servants<span class="Apple-converted-space"> </span></p>
-<p class="p4">and their co-signs to sell $300 feminism t shirts<span class="Apple-converted-space"> </span></p>
-<p class="p4">and I’m here to teach them they can only<span class="Apple-converted-space"> </span></p>
-<p class="p4">have little bits of that as a treat for being good to me</p>
 <p class="p3"><br></p>
 <p class="p4">April 8, 2020</p>
 <p class="p4">Nippleangelcum</p>
@@ -338,7 +329,8 @@
 <p class="p3"><br></p>
 <p class="p4">hundred thousand particles synapses in my mind</p>
 <p class="p4">hunder thousand pressures synapses in my spine</p>
-<p class="p4">They wasted 15 20 dollars on spray paint they could’ve fucking bought a pack of beer a pack of dope whatever you wanted</p>
+<p class="p4">They wasted 15 20 dollars on spray paint<span class="Apple-converted-space"> </span></p>
+<p class="p4">they could’ve fucking bought a pack of beer a pack of dope whatever you wanted</p>
 <p class="p4">The mentality<span class="Apple-converted-space"> </span></p>
 <p class="p4">We should go around the neighborhood tagging</p>
 <p class="p4">My view of karma</p>
@@ -349,7 +341,8 @@
 <p class="p4">Caps the whole 9 yards</p>
 <p class="p4">Blew up a lot of desert</p>
 <p class="p4">It was MDA</p>
-<p class="p4">Before they added the only M the seed flower heads and the seeds</p>
+<p class="p4">Before they added the only M<span class="Apple-converted-space"> </span></p>
+<p class="p4">the seed flower heads and the seeds</p>
 <p class="p3"><br></p>
 <p class="p4">Regular isopropyl</p>
 <p class="p4">91 percent it burns pretty</p>
