--- a/events/2023.html
+++ b/events/2023.html
@@ -28,7 +28,7 @@
 <p class="p3"><span class="s5"><br>
 </span></p>
 <p class="p3"><span class="s5">future:</span></p>
-<p class="p3"><span class="s5"><a href="http://bliss1.org/events/">events</a></span></p>
+<p class="p3"><span class="s5"><a href="http://bliss1.org/events">events</a></span></p>
 <p class="p4"><span class="s5"></span><br></p>
 </body>
 </html>
