--- a/events/2023.html
+++ b/events/2023.html
@@ -24,7 +24,7 @@
 <p class="p3"><span class="s5">2023</span></p>
 <p class="p3"><span class="s5"><a href="http://bliss1.org/events/2023/june30">june 30</a></span></p>
 <p class="p3"><span class="s5"><a href="http://bliss1.org/events/2023/july04">july 04</a><span class="Apple-converted-space"> </span></span></p>
-
+<p class="p3"><span class="s5"><a href="http://bliss1.org/events/2023/july11">july 11</a></span></p>
 <p class="p3"><span class="s5"><br>
 </span></p>
 <p class="p3"><span class="s5">future:</span></p>
