--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <p>welcome to bliss1.org . scroll down for all high quality flyers of upcoming events. email lifeisconstantextortion@gmail.com with any questions. </p>
+  <p>welcome to bliss1.org . scroll down for all high quality flyers of upcoming events (hold down tap - add to photos to download, or right click and save as to download the high quality flyer). email lifeisconstantextortion@gmail.com with any questions. </p>
   <p><span class="s4"><img src="12062023.png" width="550" height="550"</span></p>
   <p><span class="s4"><img src="12072023.png" width="561" height="509"</span></p>
   <p><span class="s4"><img src="12082023.png" width="520" height="454"</span></p>
