--- a/121023.html
+++ b/121023.html
@@ -24,16 +24,16 @@
   </style>
 </head>
 <body>
-<p class="p3"><span class="s4">sept 04 2023</span></p>
+<p class="p3"><span class="s4">dec 10 2023</span></p>
 <p class="p4"><span class="s4">email questions to <a href="mailto:lifeisconstantextortion@gmail.com"><span class="s5">lifeisconstantextortion@gmail.com</span></a><span class="Apple-converted-space">     </span></span></p>
-<p class="p4"><span class="s4">band links:<span class="Apple-converted-space">  </span><a href="https://www.instagram.com/lifeisconstantextortion/"><span class="s6">life is constant extortion</span></a> . <a href="https://www.youtube.com/watch?v=qOQwHXDglOQ"><span class="s7">dagger polyester</span></a> . <a href="https://lovespiral.bandcamp.com/album/demo-2023"><span class="s7">love spiral (oakland)</span></a> . <a href="https://whine42069.bandcamp.com/album/staplegun"><span class="s7">whine (oakland)</span></a> . <a href="https://www.instagram.com/likethafruit2/"><span class="s7">uva</span></a> . <a href="https://www.youtube.com/watch?v=rtO1mJw-tms"><span class="s7">ultrapissed</span></a> . <a href="https://soundcloud.com/hiremepleaseiwontletudown"><span class="s7">a butter life</span></a> . <a href="mailto:gatekeeper02225@gmail.com"><span class="s7">emma barreto</span></a> . <a href="https://grbageman.bandcamp.com/"><span class="s7">grbageman</span></a> . <a href="https://marrythepsycho.bandcamp.com/album/project-13"><span class="s7">marry the psycho</span></a> . <a href="https://www.instagram.com/p/CtlJjuEgyGE"><span class="s7">skin star</span></a> . <a href="https://quranshaheed.bandcamp.com/album/process"><span class="s7">qur’an shaheed</span></a> . <a href="https://soundcloud.com/luna_miel"><span class="s7">nonexistent!</span></a> . <a href="https://www.instagram.com/midi_wizard/"><span class="s7">punitive</span></a> <a href="https://www.instagram.com/vomitchild/"><span class="s7">worm</span></a> . <a href="https://soundcloud.com/kuntcobain11"><span class="s7">kunt cobain</span></a> .<span class="Apple-converted-space"> </span></span></p>
-<p class="p4"><span class="s4">venue:<span class="Apple-converted-space">  </span>email for address… “tromaville”…</span></p>
+<p class="p4"><span class="s4">band links:<span class="Apple-converted-space">  </span><a href="https://www.instagram.com/lifeisconstantextortion/"><span class="s6">life is constant extortion (multi-instrumentalist)</span></a> . <a href="https://www.instagram.com/jellyeeee"><span class="s7">jellyeeee (solo singer/ableton)</span></a> . <a href="https://www.instagram.com/mo0d.4u"><span class="s7">mo0d (members of zulu - live jazz band)</span></a> . <a href="https://www.instagram.com/spunk_official"><span class="s7">spunk (live punk band)</span></a> . <a href="https://www.instagram.com/9bloodhound9/"><span class="s7">bloodhound (vinyl turntabilism tekno djing with 5tr8tch)</span></a> . <a href="https://www.instagram.com/5tr8tch"><span class="s7">5tr8tch (vinyl turntabilism tekno djing with bloodhound)</span></a> . <a href="https://www.instagram.com/androcided"><span class="s7">androcided (live hardware electronics)e</span></a> . 
+<p class="p4"><span class="s4">venue:<span class="Apple-converted-space">  </span>the love song bar (attached to the regent): 450 main st, los angeles, ca 90013</span></p>
 <p class="p4"><span class="s4">time: noon-9pm <span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s4">cost: $10</span></p>
 <p class="p4"><span class="s4">age: all ages<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s4">flyer:</span></p>
 <p class="p5"><span class="s4"></span><br></p>
-<p class="p6"><span class="s4"><img src="sept04.png" width="888" height="888"</span></p>
+<p class="p6"><span class="s4"><img src="12102023v2.png" width="500" height="500"</span></p>
 <p class="p7"><span class="s4"></span><br></p>
 <p class="p4"><span class="s4"><br>
 </span></p>
