--- a/index.html
+++ b/index.html
@@ -20,5 +20,17 @@
   <p><span class="s4"><img src="12062023.png" width="550" height="550"</span></p>
   <p><span class="s4"><img src="12072023.png" width="561" height="509"</span></p>
   <p><span class="s4"><img src="12082023.png" width="520" height="454"</span></p>
+  <p class="p3"><span class="s4">dec 10 2023</span></p>
+<p class="p4"><span class="s4">email questions to <a href="mailto:lifeisconstantextortion@gmail.com"><span class="s5">lifeisconstantextortion@gmail.com</span></a><span class="Apple-converted-space">     </span></span></p>
+<p class="p4"><span class="s4">band links:<span class="Apple-converted-space">  </span><a href="https://www.instagram.com/lifeisconstantextortion/"><span class="s6">life is constant extortion (multi-instrumentalist)</span></a> . <a href="https://www.instagram.com/jellyeeee"><span class="s7">jellyeeee (solo singer/ableton)</span></a> . <a href="https://www.instagram.com/mo0d.4u"><span class="s7">mo0d (members of zulu - live jazz band)</span></a> . <a href="https://www.instagram.com/spunk_official"><span class="s7">spunk (live punk band)</span></a> . <a href="https://www.instagram.com/9bloodhound9/"><span class="s7">bloodhound (vinyl turntabilism tekno djing with 5tr8tch)</span></a> . <a href="https://www.instagram.com/5tr8tch"><span class="s7">5tr8tch (vinyl turntabilism tekno djing with bloodhound)</span></a> . <a href="https://www.instagram.com/androcided"><span class="s7">androcided (live hardware electronics)</span></a> . 
+<p class="p4"><span class="s4">venue:<span class="Apple-converted-space">  </span>the love song bar (attached to the regent): 450 main st, los angeles, ca 90013</span></p>
+<p class="p4"><span class="s4">time: 7pm-2am <span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s4">cost: $10</span></p>
+<p class="p4"><span class="s4">age: all ages<span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s4">flyer:</span></p>
+<p class="p5"><span class="s4"></span><br></p>
+<p class="p6"><span class="s4"><img src="bliss1.org/12102023v2.png" width="800" height="800"</span></p>
+<p class="p7"><span class="s4"></span><br></p>
+<p class="p4"><span class="s4"><br>
 </body>
 </html>
