--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   </style>
 </head>
 <body>
-  <p>welcome to bliss1.org . scroll down for all high quality flyers of upcoming events (hold down tap - add to photos to download, or right click and save as to download the high quality flyer). email lifeisconstantextortion@gmail.com with any questions. </p>
-
-  <p><span class="s4"><img src="12082023.png" width="520" height="454"</span></p>
-  <p><span class="s4"><img src="12102023v3.png" width="500" height="500"</span></p>
+<p class="p1"><span class="s1"><a href="http://bliss1.org"><b>bliss1.org</b></a><b><span class="Apple-converted-space"> </span></b></span></p>
+<p class="p2"><span class="s2"><a href="http://bliss1.org/events"><i>events</i></a></span><span class="s3"><i> . </i><a href="http://bliss1.org/audio"><span class="s4"><i>audio</i></span></a><i> . </i><a href="http://bliss1.org/photo"><span class="s4"><i>photo</i></span></a><i> . </i><a href="http://bliss1.org/text"><span class="s4"><i>text</i></span></a></span></p>
 </body>
 </html>
